// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/mee-karaoke animations/SlideOut To Bottom 1`] = `
Array [
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <div
    style={
      Object {
        "height": 320,
        "overflow": "hidden",
        "position": "relative",
        "width": 640,
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <div
        className="__remotion-player"
        style={Object {}}
      >
        <div
          className="bg-pink items-center justify-center"
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            className="relative"
            style={
              Object {
                "transform": "translateY(0px)",
              }
            }
          >
            <div
              className="bg-purple-200 p-8 rounded text-white text-xl"
            >
              Hello World
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "background": "linear-gradient(transparent, rgba(0, 0, 0, 0.4))",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
          "paddingBottom": 10,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 10,
          "position": "absolute",
          "transition": "opacity 0.3s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "userSelect": "none",
            }
          }
        >
          <button
            aria-label="Play video"
            onClick={[Function]}
            style={
              Object {
                "appearance": "none",
                "backgroundColor": "transparent",
                "border": "none",
                "cursor": "pointer",
                "display": "inline",
                "height": 25,
                "marginBottom": 0,
                "marginTop": 0,
                "padding": 0,
              }
            }
            title="Play video"
            type="button"
          >
            <svg
              height={25}
              style={
                Object {
                  "transform": "rotate(90deg)",
                }
              }
              viewBox="-100 -100 400 400"
              width={25}
            >
              <path
                d="M 2 172 a 196 100 0 0 0 195 5 A 196 240 0 0 0 100 2.259 A 196 240 0 0 0 2 172 z"
                fill="#fff"
                stroke="#fff"
                strokeLinejoin="round"
                strokeWidth="100"
              />
            </svg>
          </button>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "display": "inline-flex",
                "justifyContent": "center",
                "padding": "6px",
                "position": "relative",
                "touchAction": "none",
              }
            }
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
	.__remotion-volume-slider-06502142681274563::-webkit-slider-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
	.__remotion-volume-slider-06502142681274563 {
		background-image: linear-gradient(
			to right,
			white 100%, rgba(255, 255, 255, 0) 100%
		);
	}

	.__remotion-volume-slider-06502142681274563::-moz-range-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
",
                }
              }
            />
            <button
              aria-label="Mute sound"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              style={
                Object {
                  "appearance": "none",
                  "background": "none",
                  "border": "none",
                  "cursor": "pointer",
                  "display": "inline",
                  "height": 25,
                  "padding": 0,
                  "width": 25,
                }
              }
              title="Mute sound"
              type="button"
            >
              <svg
                height={25}
                viewBox="0 0 24 24"
                width={25}
              >
                <path
                  d="M3 10v4c0 .55.45 1 1 1h3l3.29 3.29c.63.63 1.71.18 1.71-.71V6.41c0-.89-1.08-1.34-1.71-.71L7 9H4c-.55 0-1 .45-1 1zm13.5 2A4.5 4.5 0 0014 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 4.45v.2c0 .38.25.71.6.85C17.18 6.53 19 9.06 19 12s-1.82 5.47-4.4 6.5c-.36.14-.6.47-.6.85v.2c0 .63.63 1.07 1.21.85C18.6 19.11 21 15.84 21 12s-2.4-7.11-5.79-8.4c-.58-.23-1.21.22-1.21.85z"
                  fill="#fff"
                />
              </svg>
            </button>
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "color": "white",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "maxWidth": 0,
                "overflow": "hidden",
                "textOverflow": "ellipsis",
              }
            }
          >
            0:00
             / 
            0:01
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <div
          style={Object {}}
        />
      </div>
      <div
        style={
          Object {
            "height": 8,
          }
        }
      />
      <div
        onPointerDown={[Function]}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "paddingBottom": 4,
            "paddingTop": 4,
            "position": "relative",
            "touchAction": "none",
            "userSelect": "none",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 2.5,
              "height": 5,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.25)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "width": "0%",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 6,
              "boxShadow": "0 0 2px black",
              "height": 12,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0.5,
              "width": 12,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`@mykeels/mee-karaoke animations/SlideOut To Left 1`] = `
Array [
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <div
    style={
      Object {
        "height": 320,
        "overflow": "hidden",
        "position": "relative",
        "width": 640,
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <div
        className="__remotion-player"
        style={Object {}}
      >
        <div
          className="bg-pink items-center justify-center"
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            className="relative"
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <div
              className="bg-purple-200 p-8 rounded text-white text-xl"
            >
              Hello World
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "background": "linear-gradient(transparent, rgba(0, 0, 0, 0.4))",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
          "paddingBottom": 10,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 10,
          "position": "absolute",
          "transition": "opacity 0.3s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "userSelect": "none",
            }
          }
        >
          <button
            aria-label="Play video"
            onClick={[Function]}
            style={
              Object {
                "appearance": "none",
                "backgroundColor": "transparent",
                "border": "none",
                "cursor": "pointer",
                "display": "inline",
                "height": 25,
                "marginBottom": 0,
                "marginTop": 0,
                "padding": 0,
              }
            }
            title="Play video"
            type="button"
          >
            <svg
              height={25}
              style={
                Object {
                  "transform": "rotate(90deg)",
                }
              }
              viewBox="-100 -100 400 400"
              width={25}
            >
              <path
                d="M 2 172 a 196 100 0 0 0 195 5 A 196 240 0 0 0 100 2.259 A 196 240 0 0 0 2 172 z"
                fill="#fff"
                stroke="#fff"
                strokeLinejoin="round"
                strokeWidth="100"
              />
            </svg>
          </button>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "display": "inline-flex",
                "justifyContent": "center",
                "padding": "6px",
                "position": "relative",
                "touchAction": "none",
              }
            }
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
	.__remotion-volume-slider-021214772830717266::-webkit-slider-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
	.__remotion-volume-slider-021214772830717266 {
		background-image: linear-gradient(
			to right,
			white 100%, rgba(255, 255, 255, 0) 100%
		);
	}

	.__remotion-volume-slider-021214772830717266::-moz-range-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
",
                }
              }
            />
            <button
              aria-label="Mute sound"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              style={
                Object {
                  "appearance": "none",
                  "background": "none",
                  "border": "none",
                  "cursor": "pointer",
                  "display": "inline",
                  "height": 25,
                  "padding": 0,
                  "width": 25,
                }
              }
              title="Mute sound"
              type="button"
            >
              <svg
                height={25}
                viewBox="0 0 24 24"
                width={25}
              >
                <path
                  d="M3 10v4c0 .55.45 1 1 1h3l3.29 3.29c.63.63 1.71.18 1.71-.71V6.41c0-.89-1.08-1.34-1.71-.71L7 9H4c-.55 0-1 .45-1 1zm13.5 2A4.5 4.5 0 0014 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 4.45v.2c0 .38.25.71.6.85C17.18 6.53 19 9.06 19 12s-1.82 5.47-4.4 6.5c-.36.14-.6.47-.6.85v.2c0 .63.63 1.07 1.21.85C18.6 19.11 21 15.84 21 12s-2.4-7.11-5.79-8.4c-.58-.23-1.21.22-1.21.85z"
                  fill="#fff"
                />
              </svg>
            </button>
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "color": "white",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "maxWidth": 0,
                "overflow": "hidden",
                "textOverflow": "ellipsis",
              }
            }
          >
            0:00
             / 
            0:01
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <div
          style={Object {}}
        />
      </div>
      <div
        style={
          Object {
            "height": 8,
          }
        }
      />
      <div
        onPointerDown={[Function]}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "paddingBottom": 4,
            "paddingTop": 4,
            "position": "relative",
            "touchAction": "none",
            "userSelect": "none",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 2.5,
              "height": 5,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.25)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "width": "0%",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 6,
              "boxShadow": "0 0 2px black",
              "height": 12,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0.5,
              "width": 12,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`@mykeels/mee-karaoke animations/SlideOut To Right 1`] = `
Array [
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <div
    style={
      Object {
        "height": 320,
        "overflow": "hidden",
        "position": "relative",
        "width": 640,
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <div
        className="__remotion-player"
        style={Object {}}
      >
        <div
          className="bg-pink items-center justify-center"
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            className="relative"
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <div
              className="bg-purple-200 p-8 rounded text-white text-xl"
            >
              Hello World
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "background": "linear-gradient(transparent, rgba(0, 0, 0, 0.4))",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
          "paddingBottom": 10,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 10,
          "position": "absolute",
          "transition": "opacity 0.3s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "userSelect": "none",
            }
          }
        >
          <button
            aria-label="Play video"
            onClick={[Function]}
            style={
              Object {
                "appearance": "none",
                "backgroundColor": "transparent",
                "border": "none",
                "cursor": "pointer",
                "display": "inline",
                "height": 25,
                "marginBottom": 0,
                "marginTop": 0,
                "padding": 0,
              }
            }
            title="Play video"
            type="button"
          >
            <svg
              height={25}
              style={
                Object {
                  "transform": "rotate(90deg)",
                }
              }
              viewBox="-100 -100 400 400"
              width={25}
            >
              <path
                d="M 2 172 a 196 100 0 0 0 195 5 A 196 240 0 0 0 100 2.259 A 196 240 0 0 0 2 172 z"
                fill="#fff"
                stroke="#fff"
                strokeLinejoin="round"
                strokeWidth="100"
              />
            </svg>
          </button>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "display": "inline-flex",
                "justifyContent": "center",
                "padding": "6px",
                "position": "relative",
                "touchAction": "none",
              }
            }
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
	.__remotion-volume-slider-01311433701775968::-webkit-slider-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
	.__remotion-volume-slider-01311433701775968 {
		background-image: linear-gradient(
			to right,
			white 100%, rgba(255, 255, 255, 0) 100%
		);
	}

	.__remotion-volume-slider-01311433701775968::-moz-range-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
",
                }
              }
            />
            <button
              aria-label="Mute sound"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              style={
                Object {
                  "appearance": "none",
                  "background": "none",
                  "border": "none",
                  "cursor": "pointer",
                  "display": "inline",
                  "height": 25,
                  "padding": 0,
                  "width": 25,
                }
              }
              title="Mute sound"
              type="button"
            >
              <svg
                height={25}
                viewBox="0 0 24 24"
                width={25}
              >
                <path
                  d="M3 10v4c0 .55.45 1 1 1h3l3.29 3.29c.63.63 1.71.18 1.71-.71V6.41c0-.89-1.08-1.34-1.71-.71L7 9H4c-.55 0-1 .45-1 1zm13.5 2A4.5 4.5 0 0014 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 4.45v.2c0 .38.25.71.6.85C17.18 6.53 19 9.06 19 12s-1.82 5.47-4.4 6.5c-.36.14-.6.47-.6.85v.2c0 .63.63 1.07 1.21.85C18.6 19.11 21 15.84 21 12s-2.4-7.11-5.79-8.4c-.58-.23-1.21.22-1.21.85z"
                  fill="#fff"
                />
              </svg>
            </button>
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "color": "white",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "maxWidth": 0,
                "overflow": "hidden",
                "textOverflow": "ellipsis",
              }
            }
          >
            0:00
             / 
            0:01
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <div
          style={Object {}}
        />
      </div>
      <div
        style={
          Object {
            "height": 8,
          }
        }
      />
      <div
        onPointerDown={[Function]}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "paddingBottom": 4,
            "paddingTop": 4,
            "position": "relative",
            "touchAction": "none",
            "userSelect": "none",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 2.5,
              "height": 5,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.25)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "width": "0%",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 6,
              "boxShadow": "0 0 2px black",
              "height": 12,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0.5,
              "width": 12,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`@mykeels/mee-karaoke animations/SlideOut To Top 1`] = `
Array [
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <audio
    src="data:audio/mp3;base64,/+MYxAAJcAV8AAgAABn//////+/gQ5BAMA+D4Pg+BAQBAEAwD4Pg+D4EBAEAQDAPg++hYBH///hUFQVBUFREDQNHmf///////+MYxBUGkAGIMAAAAP/29Xt6lUxBTUUzLjEwMFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV/+MYxDUAAANIAAAAAFVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV"
  />,
  <div
    style={
      Object {
        "height": 320,
        "overflow": "hidden",
        "position": "relative",
        "width": 640,
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <div
        className="__remotion-player"
        style={Object {}}
      >
        <div
          className="bg-pink items-center justify-center"
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            className="relative"
            style={
              Object {
                "transform": "translateY(0px)",
              }
            }
          >
            <div
              className="bg-purple-200 p-8 rounded text-white text-xl"
            >
              Hello World
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "background": "linear-gradient(transparent, rgba(0, 0, 0, 0.4))",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "opacity": 1,
          "paddingBottom": 10,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 10,
          "position": "absolute",
          "transition": "opacity 0.3s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "userSelect": "none",
            }
          }
        >
          <button
            aria-label="Play video"
            onClick={[Function]}
            style={
              Object {
                "appearance": "none",
                "backgroundColor": "transparent",
                "border": "none",
                "cursor": "pointer",
                "display": "inline",
                "height": 25,
                "marginBottom": 0,
                "marginTop": 0,
                "padding": 0,
              }
            }
            title="Play video"
            type="button"
          >
            <svg
              height={25}
              style={
                Object {
                  "transform": "rotate(90deg)",
                }
              }
              viewBox="-100 -100 400 400"
              width={25}
            >
              <path
                d="M 2 172 a 196 100 0 0 0 195 5 A 196 240 0 0 0 100 2.259 A 196 240 0 0 0 2 172 z"
                fill="#fff"
                stroke="#fff"
                strokeLinejoin="round"
                strokeWidth="100"
              />
            </svg>
          </button>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "display": "inline-flex",
                "justifyContent": "center",
                "padding": "6px",
                "position": "relative",
                "touchAction": "none",
              }
            }
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
	.__remotion-volume-slider-05166408885270357::-webkit-slider-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
	.__remotion-volume-slider-05166408885270357 {
		background-image: linear-gradient(
			to right,
			white 100%, rgba(255, 255, 255, 0) 100%
		);
	}

	.__remotion-volume-slider-05166408885270357::-moz-range-thumb {
		-webkit-appearance: none;
		background-color: white;
		border-radius: 6px;
		box-shadow: 0 0 2px black;
		height: 12px;
		width: 12px;
	}
",
                }
              }
            />
            <button
              aria-label="Mute sound"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              style={
                Object {
                  "appearance": "none",
                  "background": "none",
                  "border": "none",
                  "cursor": "pointer",
                  "display": "inline",
                  "height": 25,
                  "padding": 0,
                  "width": 25,
                }
              }
              title="Mute sound"
              type="button"
            >
              <svg
                height={25}
                viewBox="0 0 24 24"
                width={25}
              >
                <path
                  d="M3 10v4c0 .55.45 1 1 1h3l3.29 3.29c.63.63 1.71.18 1.71-.71V6.41c0-.89-1.08-1.34-1.71-.71L7 9H4c-.55 0-1 .45-1 1zm13.5 2A4.5 4.5 0 0014 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 4.45v.2c0 .38.25.71.6.85C17.18 6.53 19 9.06 19 12s-1.82 5.47-4.4 6.5c-.36.14-.6.47-.6.85v.2c0 .63.63 1.07 1.21.85C18.6 19.11 21 15.84 21 12s-2.4-7.11-5.79-8.4c-.58-.23-1.21.22-1.21.85z"
                  fill="#fff"
                />
              </svg>
            </button>
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
          <div
            style={
              Object {
                "color": "white",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "maxWidth": 0,
                "overflow": "hidden",
                "textOverflow": "ellipsis",
              }
            }
          >
            0:00
             / 
            0:01
          </div>
          <div
            style={
              Object {
                "width": 10,
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <div
          style={Object {}}
        />
      </div>
      <div
        style={
          Object {
            "height": 8,
          }
        }
      />
      <div
        onPointerDown={[Function]}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "paddingBottom": 4,
            "paddingTop": 4,
            "position": "relative",
            "touchAction": "none",
            "userSelect": "none",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 2.5,
              "height": 5,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.25)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "borderRadius": 2.5,
                "height": 5,
                "marginLeft": "0%",
                "width": "0%",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 6,
              "boxShadow": "0 0 2px black",
              "height": 12,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0.5,
              "width": 12,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;
